k8s/sonarqube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      containers:
        - name: sonarqube
          image: sonarqube:community
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: sonar-data
              mountPath: /opt/sonarqube/data
            - name: sonar-logs
              mountPath: /opt/sonarqube/logs
            - name: sonar-temp
              mountPath: /opt/sonarqube/temp
      volumes:
        - name: sonar-data
          persistentVolumeClaim:
            claimName: sonarqube-pvc
        - name: sonar-logs
          persistentVolumeClaim:
            claimName: sonarqube-pvc
        - name: sonar-temp
          persistentVolumeClaim:
            claimName: sonarqube-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-service
spec:
  type: NodePort
  ports:
    - port: 9000
      targetPort: 9000
      nodePort: 30000
  selector:
    app: sonarqube
